--- a/style.css
+++ b/style.css
@@ -658,7 +658,8 @@ header{
 
 @media(max-width: 425px){
     .right{
-        margin-left: 93px;
+        margin-left: 50px;
+        width: 350px;
     }
     .header1{
         height: 150px;
@@ -671,7 +672,7 @@ header{
         display: none;
     }
     .category-1{
-        margin-top: 40px;
+        margin-top: 100px;
     }
     .header_main_div{
         padding: 5px 5px;
@@ -690,7 +691,7 @@ header{
         width: 58px;
     }
     .category-2{
-        margin-top: 280px;
+        margin-top: 350px;
     }
     .search-bar input{
         font-size: 12px;
@@ -699,7 +700,8 @@ header{
 
 @media(max-width: 375px){
     .right{
-        margin-left: 80px;
+        margin-left: 30px;
+        width: 300px;
     }
     .left-heading-1 h2{
         font-size: 15px;
@@ -717,10 +719,28 @@ header{
         margin-left: 7px;
     }
     .category-2{
-        margin-top: 250px;
+        margin-top: 320px;
         margin-left: 15px;
     }
     .category-1{
         margin-left: 15px;
+        margin-top: 70px;
+    }
+}
+@media(max-width: 330px){
+    .plus{
+        width: 10px;
+    }
+    .flipkart-logo a{
+        font-size: 11px;
+    }
+    .flip-logo{
+        width: 50px;
+    }
+    .category-1{
+        width: 93%;
+    }
+    .right{
+        margin-left: 18px;
     }
 }
